fix side menus transition on mobile and adds some animations

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -359,20 +359,21 @@
 #sideMenuMobile {
   height: 100vh;
   background: purple;
-  width: calc(100vw - 20%);
+  width: 100vw;
   position: fixed;
   top: 0;
   transform: translateX(-100%);
   transition: var(--transition-time) ease;
+  /* z-index: 3000; */
 }
 
 /* ============================= SIDE MENU MOBILE END ================================ */
 
 /* animation playground 😄 🎮 */
 .main-translated-out {
-  transform: translateX(80%);
+  transform: translateX(100%);
 }
 
-.side-mobile-menu-translated-in {
+/* .side-mobile-menu-translated-in {
   transform: translateX(0);
-}
+} */
